<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/textViewEmployerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewEmployerPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAppearance="?android:textAppearanceMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmployerName" />

        <TextView
            android:id="@+id/textViewLabelSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/label_salary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmployerPosition" />

        <TextView
            android:id="@+id/textViewEmployerSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelSalary"
            app:layout_constraintTop_toTopOf="@+id/textViewLabelSalary" />

        <TextView
            android:id="@+id/textViewSom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="сом"
            app:layout_constraintStart_toEndOf="@+id/textViewEmployerSalary"
            app:layout_constraintTop_toTopOf="@+id/textViewEmployerSalary" />

        <TextView
            android:id="@+id/textViewLabelBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/label_bonus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmployerSalary" />

        <TextView
            android:id="@+id/textViewEmployerBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelBonus"
            app:layout_constraintTop_toTopOf="@+id/textViewLabelBonus" />

        <TextView
            android:id="@+id/textViewSom2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="сом"
            app:layout_constraintStart_toEndOf="@+id/textViewEmployerBonus"
            app:layout_constraintTop_toTopOf="@+id/textViewEmployerBonus" />

        <TextView
            android:id="@+id/textViewLabelPersonalDeduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/label_pd"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelBonus" />

        <TextView
            android:id="@+id/textViewPersonalWage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelPersonalDeduction"
            app:layout_constraintTop_toTopOf="@+id/textViewLabelPersonalDeduction" />

        <TextView
            android:id="@+id/textViewLabelSalaryOfMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/salary_of_month"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelPersonalDeduction" />

        <TextView
            android:id="@+id/textViewMonthSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/textViewLabelSalaryOfMonth"
            app:layout_constraintTop_toTopOf="@+id/textViewLabelSalaryOfMonth" />

        <TextView
            android:id="@+id/textViewSomInMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/som_in_month"
            app:layout_constraintStart_toEndOf="@+id/textViewMonthSalary"
            app:layout_constraintTop_toTopOf="@+id/textViewLabelSalaryOfMonth" />

        <TextView
            android:id="@+id/textViewOptionDigit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="&#8942;"
            android:textColor="@color/colorAccent"
            android:textAppearance="?android:textAppearanceLarge"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding ="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>